# GPU-HeiProMap

./: .gitignore  .gitmodules  CMakeLists.txt  ReadMe.md  build.sh  build_cuda.sh  build_openmp.sh  main.cpp
src/hm/: hm_solver.h  solver.h
src/hm/datastructures/: device_graph.h  hm_device_graph.h  hm_host_graph.h  host_graph.h
src/hm/partitioning/: partition.h
src/hm/utility/: JSON_utils.cpp  JSON_utils.h  command_line_parser.h  configuration.h  definitions.h  util.h
src/im/: comm_cost.h  configuration.h  definitions.h  device_graph.h  distance_oracle.h  failsafe_rebalancer.h  global_swap_refinement.h  gpu_assert.h  heavy_edge_matching.h  host_graph.h  im_solver.h  jet_label_propagation.h  kaffpa_initial_partition.h  large_vertex_partition_csr.h  local_sawp_refinement.h  macros.h  matching.h  partition_manager.h  profiler.h  solver.h  swap_refinement.h  util.h  vertex_partition_csr.h
src/im/data_structures/: device_graph.h  distance_oracle.h  graph.h  host_graph.h  large_vertex_partition_csr.h  partition_manager.h
src/im/matching/: heavy_edge_matching.h  matching.h
src/im/partitioning/: kaffpa_initial_partition.h
src/im/refinement/: jet_label_propagation.h
src/im/utility/: comm_cost.h  gpu_assert.h
src/utility/: JSON_utils.cpp  JSON_utils.h  configuration.h  definitions.h  kokkos_util.h  macros.h  profiler.h  util.h
